<resources>
    <string name="app_name">WayFind</string>
    <string name="title_menu_1">Transport Navigation App</string>
    <string name="title_menu_2">Transportation Recommender</string>
    <string name="title_menu_3">Destination Search</string>
    <string name="title_menu_4">Navigation</string>
    <string name="desc_menu_1">Explore new destinations, effortlessly find your path, and never lose your way!</string>
    <string name="desc_menu_2">Discover the best routes and modes of transportation tailored to your needs. Our intelligent system optimizes your commute, offering efficient, eco-friendly, and personalized travel solutions. Navigate your journey with ease and confidence.</string>
    <string name="desc_menu_3">Find your destination quickly and easily. Our smart search feature provides the most efficient routes, estimated travel times, and best transportation options to ensure a smooth journey to your desired location.</string>
    <string name="desc_menu_4">Experience smooth and reliable navigation with our advanced system. Get real-time directions, traffic updates, and alternative routes to ensure you reach your destination swiftly and safely.</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="favorite">Favorite</string>
    <string name="all">All</string>
    <string name="top_rated">Top Rated</string>
    <string name="open_now">Open Now</string>
    <string name="places">Places</string>
    <string name="ERROR_EMAIL_EMPTY">Email cannot be empty</string>
    <string name="ERROR_EMAIL_INVALID_FORMAT">The email format entered is invalid</string>
    <string name="ERROR_EMAIL_ALREADY_REGISTERED">This email is already registered</string>
    <string name="ERROR_NAME_EMPTY">Name cannot be empty</string>
    <string name="ERROR_NAME_TOOLONG">Name cannot exceed 25 characters</string>
    <string name="ERROR_PASSWORD_EMPTY">Password cannot be empty</string>
    <string name="ERROR_PASSWORD_LENGTH">Password must be at least 8 characters long</string>
    <string name="ERROR_PASSWORD_MISMATCH">Password and confirm password do not match</string>
    <string name="hi_please_login">Hi, Please Login!</string>
    <string name="email">Email</string>
    <string name="HINT_EMAIL">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="HINT_PASSWORD">Enter Your Password</string>
    <string name="LOGIN_TEXT">Login</string>
    <string name="signup_account">SignUp Account</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="HINT_FULL_NAME">Enter Full Name</string>
    <string name="unauthorized">Please check email or password correctly</string>
    <string name="timeout">Timeout!! please try again later</string>
    <string name="error_message">"Error message :  "</string>
    <string name="input_name">Please input your name</string>
    <string name="user_create">User created</string>
    <string name="email_taken">Email is already taken</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="start_running">Start Running</string>
    <string name="stop_running">Stop Running</string>
    <string name="start_point">Start Point</string>
    <string name="title_turn_by_turn">Add a complete turn-by-turn experience</string>
    <string name="description_turn_by_turn">Render a complete turn-by-turn experience using all relevant Navigation SDK APIs and pre-built UI components.</string>
    <string name="place_autocomplete_query_hint">Search for places</string>
    <string name="action_place_autocomplete_kotlin_example">Place Autocomplete</string>
    <string name="toolbar_title">Search</string>
    <string name="query_hint">Where to?</string>
    <string name="profile">Profile</string>
    <string name="your_name">Agus Akbar</string>
    <string name="email_value">agusakbar@gmail.com</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age_value">34</string>
    <string name="age">Age</string>
    <string name="HINT_AGE">Enter Your Age</string>
    <string name="HINT_Gender">Enter Your Gender (Male/Female)</string>
    <string-array name="data_photo">
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/b/b1/Merdeka_Square_Monas_02.jpg/800px-Merdeka_Square_Monas_02.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/TMII_Istana_Anak-anak_Indonesia.JPG/1200px-TMII_Istana_Anak-anak_Indonesia.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Festival_beach_Ancol_Jakarta.jpg/1200px-Festival_beach_Ancol_Jakarta.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/ee/Fatahillah.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/7/78/Ragunan_Zoo_Gate.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/0/02/Dunia_Fantasi_Ancol.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/4/45/Museum_Nasional_Indonesia.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/d/da/Taman_Suropati_%281%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/d/d3/Plaza_Taman_Ismail_Marzuki.jpg</item>
        <item>https://cdn-2.tstatic.net/tribunnewswiki/foto/bank/images/2-Museum-MACAN.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/9/9f/Berlin_Zeiss_Planetarium.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/East_side_of_Pari_Island%2C_Kepulauan_Seribu_National_Park.jpg/800px-East_side_of_Pari_Island%2C_Kepulauan_Seribu_National_Park.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Jakarta_aquarium.jpg/1200px-Jakarta_aquarium.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Taman_Menteng.jpg/640px-Taman_Menteng.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/2/25/Setu_Babakan.jpg</item>
        <item>https://storage.jakarta-tourism.go.id/public/articles/35e32c73-a369-4bf9-9a6b-50e3766ae990.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/e3/Museum_Bank_Indonesia_tampak_depan.jpg</item>
        <item>https://asset.kompas.com/crops/vPGWWgVMN9c5UWn_vKiShuILFF0=/0x0:1000x667/750x500/data/photo/2022/09/14/63212b32e0b43.jpg</item>
        <item>https://www.jakartamangrove.id/assets/images/img-2988-copy-2000x1333.jpg</item>
    </string-array>
    <string-array name="data_name">
        <item>Monumen Nasional (Monas)</item>
        <item>Taman Mini Indonesia Indah (TMII)</item>
        <item>Ancol Taman Impian</item>
        <item>Kota Tua Jakarta</item>
        <item>Kebun Binatang Ragunan</item>
        <item>Dunia Fantasi (Dufan)</item>
        <item>Museum Nasional Indonesia</item>
        <item>Taman Suropati</item>
        <item>Taman Ismail Marzuki</item>
        <item>Museum MACAN</item>
        <item>Planetarium Jakarta</item>
        <item>Pulau Seribu</item>
        <item>Jakarta Aquarium</item>
        <item>Taman Menteng</item>
        <item>Setu Babakan</item>
        <item>Hutan Kota Gelora Bung Karno</item>
        <item>Museum Bank Indonesia</item>
        <item>Pantai Indah Kapuk (PIK)</item>
        <item>Taman Wisata Alam Mangrove Angke Kapuk</item>
    </string-array>
    <string-array name="data_coordinate">
        <item>106.82702405011068, -6.175285727969585</item>
        <item>106.89115493735801, -6.301468830613183</item>
        <item>106.84684886844066, -6.1252895341718165</item>
        <item>106.81378676334143, -6.134919334565293</item>
        <item>106.82060206340932, -6.305893587969433</item>
        <item>106.83373079389021, -6.125184367032808</item>
        <item>106.82188254720347, -6.176247633438563</item>
        <item>106.83310536489168, -6.199248334502765</item>
        <item>106.83851605622019, -6.190651525040039</item>
        <item>106.76894064120039, -6.190883383846249</item>
        <item>106.84088116036459, -6.188847392979303</item>
        <item>106.6001826345678, -5.736296295321713</item>
        <item>106.789940394291, -6.174835961297788</item>
        <item>106.83009380111534, -6.196238035248249</item>
        <item>106.82387050575925, -6.341370728701905</item>
        <item>106.80818064080312, -6.22157605650429</item>
        <item>106.81303824031411, -6.1369785856251236</item>
        <item>106.7427439873338, -6.108513206828786</item>
        <item>106.73722129003167, -6.10635161035698</item>
    </string-array>
    <string-array name="data_rating">
        <item>4.6</item>
        <item>4.6</item>
        <item>4.6</item>
        <item>4.6</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.6</item>
        <item>4.6</item>
        <item>4.8</item>
        <item>4.5</item>
        <item>4.5</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.5</item>
        <item>4.4</item>
        <item>4.7</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.3</item>
    </string-array>
    <string-array name="data_time">
        <item>08.00 - 22.00 WIB</item>
        <item>05.00 - 22.00 WIB</item>
        <item>08.00 - 20.00 WIB</item>
        <item>08.00 - 21.00 WIB</item>
        <item>07.00 - 16.00 WIB</item>
        <item>10.00 - 18.00 WIB</item>
        <item>8.30 - 16.00 WIB</item>
        <item>6.30 - 17.00 WIB</item>
        <item>9.00 - 20.00 WIB</item>
        <item>10.00 - 18.00 WIB</item>
        <item>10.00 - 18.00 WIB</item>
        <item>10.00 - 18.00 WIB</item>
        <item>10.00 - 21.00 WIB</item>
        <item>5.00 - 22.00 WIB</item>
        <item>9.00 - 15.00 WIB</item>
        <item>6.00 - 22.00 WIB</item>
        <item>8.00 - 15.00 WIB</item>
        <item>24 Jam</item>
        <item>7.00 - 18.00 WIB</item>
    </string-array>
</resources>