<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".view.register.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="Create \nAccount"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:padding="32dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"/>

        <com.dicoding.wayfind.customview.CustomEmail
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/user"
            android:drawablePadding="8dp"
            android:hint="@string/HINT_FULL_NAME"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#80837E7E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:layout_marginTop="32dp"/>

        <com.dicoding.wayfind.customview.CustomEmail
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/HINT_EMAIL"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#80837E7E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:layout_marginTop="32dp"/>

        <com.dicoding.wayfind.customview.CustomPassword
            android:id="@+id/et_Pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="8dp"
            android:hint="@string/HINT_PASSWORD"
            android:drawableEnd="@drawable/lock"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#80837E7E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/et_Age"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="8dp"
            android:hint="@string/HINT_AGE"
            android:drawableEnd="@drawable/age"
            android:inputType="number"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#80837E7E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/gender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_Gender"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="8dp"
            android:hint="@string/HINT_Gender"
            android:inputType="text"
            android:drawableEnd="@drawable/gender"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#80837E7E"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            style="@android:style/Widget.Button"
            android:textSize="25sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>